--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ a {
 }
 
 a svg {
+  width: 14px;
+  height: 14px;
   margin-right: 5px;
   transition: all .5s;
 }
@@ -86,11 +88,45 @@ svg {
   display: none;
 }
 
-@media (min-width: 425px) {
+.corgi {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+}
 
-  h1 {
-    display: none;
-  }
+.corgi div {
+  width: 150px;
+  margin: 0 20px;
+}
+
+.corgi svg {
+  width: 100%;
+}
+
+.corgi span {
+  display: block;
+  margin-top: 10px;
+  text-align: center;
+  color: #B07351;
+}
+
+.corgi div:nth-of-type(1) svg{
+  color: #B07351;
+}
+
+.corgi div:nth-of-type(2) svg {
+  color: #E6A077;
+}
+
+.corgi div:nth-of-type(3) svg {
+  color: #784225;
+}
+
+.corgi div:nth-of-type(4) svg {
+  color: #484F53;
+}
+
+@media (min-width: 425px) {
 
   #logo .st1 {
     display: block;
